--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ ul{
     font-size: 2em;
     color: gold;
 }
-li,a{
+li,.liste1,.liste2,.liste3{
     font-size: 1em;
     color: gold;
 }
@@ -21,6 +21,7 @@ h2{
     font-style: italic;
     text-align: center;
     background-color: gold;
+    border-radius: 10px 10px 10px 10px;
 }
 h1{
     font-size: 4em;
@@ -30,6 +31,7 @@ h1{
     padding: 150px;
     background-image: url(ruches3.jpg);
    background-size: cover;
+   border-radius: 10px 10px 10px 10px;
 }
 .introduction{
     font-weight: 700;
@@ -37,4 +39,34 @@ h1{
 body{
     background-image: url(ecran2.jpeg);
     opacity: 1;
+    
+}
+img{
+    align-items: center;
+    border-radius: 20px 20px 20px 20px;
+    box-shadow: 6px 6px 15px rgb(23, 39, 51);
+}
+.maclasse1, .maclasse2, .maclasse3{
+    text-align: center;
+    background-color: gold;
+    color: black;
+    font-style: italic;
+}
+.menu1,.menu2,.menu3{
+    border-radius: 5px 5px 5px 5px;
+    background-color: gold;
+    color: black;
+    font-size: 2.2em;
+    font-style: italic;
+    text-align: center;
+    border-color: black;
+    border: 2px solid black;
+}
+a:hover{
+    color: red;
+    border-color: red;
+    opacity: 0.8;
+}
+div{
+    text-align: center;
 }
