--- a/style.css
+++ b/style.css
@@ -70,3 +70,17 @@ a:hover{
 div{
     text-align: center;
 }
+td{
+    border: 1px solid black;
+}
+table{
+    border-collapse: collapse;
+    margin: auto;
+}
+td,th,caption{
+    padding: 15px;
+    color: gold;
+    font-size: 2.2em;
+    background-color: darkgoldenrod;
+    text-align: center;
+}
