--- a/style.css
+++ b/style.css
@@ -61,6 +61,7 @@ img{
     text-align: center;
     border-color: black;
     border: 2px solid black;
+    padding: 10px;
 }
 a:hover{
     color: red;
@@ -97,5 +98,4 @@ input{
 label{
     color: gold;
     font-size: 3em;
-    
 }
